@@ -51,6 +51,7 @@ bool    get_short_path_name(const char* path, str_base& out);
 bool    get_long_path_name(const char* path, str_base& out);
 bool    get_full_path_name(const char* path, str_base& out);
 bool    get_net_connection_name(const char* path, str_base& out);
+double  clock();
 
 void    map_errno();
 void    map_errno(unsigned long const oserrno);
